New parameter --host-parameter 1. Add host is added as a separate file 2. Mapping generates two additions to the host for public and private file 3. Host for software component is set according to the flag --host-parameter 4. Mapping generates restructured mapping without '*'

--- a/examples/tosca-server-example.yaml
+++ b/examples/tosca-server-example.yaml
@@ -6,10 +6,14 @@ topology_template:
       type: tosca.nodes.Compute
       properties:
         meta: "cube_master=true"
-        public_address: 10.100.157.77
+        public_address: 10.100.156.76
+        private_address: 192.168.34.34
         networks:
           default:
-            network_name: sandbox_net
+            network_name: net-for-sandbox
+        ports:
+          extra:
+            port_name: extra_port
       capabilities:
         host:
           properties:
