--- a/toscatranslator/providers/common/TOSCA_provider_definition_1_0.yaml
+++ b/toscatranslator/providers/common/TOSCA_provider_definition_1_0.yaml
@@ -27,6 +27,8 @@ node_types:
         implementation: equals.yaml
       ip_contains:
         implementation: ip_contains.yaml
+      add_host:
+        implementation: add_host.yaml
     requirements:
       - dependency:
           capability: provider.capabilities.Node
