--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -6,35 +6,15 @@ tosca.nodes.Compute:
       meta: openstack.nodes.Server.attributes.meta
   - properties:
       meta: openstack.nodes.Server.properties.meta
-  - parameter: '{self[buffer][add_host][hostname]}'
-    value: "\\{\\{ host_ip \\}\\}"
-  - parameter: openstack.nodes.FloatingIp.requirements
+  - parameter: openstack.nodes.Server.properties.auto_ip
+    value: false
+  - parameter: openstack.nodes.Server.interfaces.Standard.configure
     value:
-      parameter: server
-      value:
-        node: "{self[keyname]}_server"
-  - parameter:  openstack.nodes.FloatingIp.interfaces.Standard.configure.implementation
-    value:
-    - executor: ansible
-      source: set_fact
-      parameters:
-        host_ip: '\\{\\{ {self[keyname]}_floating_ip.floating_ip.floating_ip_address \\}\\}'
-      value: temp_value
-    - executor: ansible
-      source: add_host
-      parameters: '{self[buffer][add_host]}'
-      value: temp_value
-    - executor: ansible
-      source: shell
-      parameters: 'ssh-keyscan \\{\\{ host_ip \\}\\},`dig +short \\{\\{ host_ip \\}\\}`'
-      value: host_key
-    - executor: ansible
-      source: known_hosts
-      parameters:
-        path: ~/.ssh/known_hosts
-        name: "\\{\\{ host_ip \\}\\}"
-        key: "\\{\\{ host_key.stdout \\}\\}"
-      value: temp_value
+      implementation: add_host.yaml
+      inputs:
+        ansible_user: "{self[buffer][add_host][ansible_user]}"
+        host_ip: '\\{\\{ {self[keyname]}_server.server.public_v4 \\}\\}'
+        group: "{self[name]}_private_address"
   - properties:
       tosca_name:
         parameter: "{self[name]}"
@@ -84,12 +64,14 @@ tosca.nodes.Compute:
         - parameter: openstack.nodes.Port.properties.name
           value: "{self[name]}_port_0"
         - parameter: openstack.nodes.Server.properties.nics
-#        - parameter: openstack.nodes.Server.requirements.network
           value:
           - port-name: "{self[name]}_port_0"
       public_address:
-        - parameter: openstack.nodes.Server.properties.auto_ip
-          value: false
+        - parameter: openstack.nodes.FloatingIp.requirements
+          value:
+            parameter: server
+            value:
+              node: "{self[keyname]}_server"
         - parameter: openstack.nodes.FloatingIp
           value:
             - properties.floating_ip_address
@@ -137,8 +119,13 @@ tosca.nodes.Compute:
                           - allocation_pool_start
                           - allocation_pool_end
                           - "{self[value]}"
-        - parameter: '{self[buffer][add_host][groups]}'
-          value: '{self[keyname]}'
+        - parameter: openstack.nodes.FloatingIp.interfaces.Standard.configure
+          value:
+            implementation: add_host.yaml
+            inputs:
+              ansible_user: "{self[buffer][add_host][ansible_user]}"
+              host_ip: '\\{\\{ {self[keyname]}_floating_ip.floating_ip.floating_ip_address \\}\\}'
+              group: "{self[name]}_public_address"
       networks.*.network_name:
         parameter: openstack.nodes.Server.properties.nics
         value:
