--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -545,7 +545,7 @@ node_types:
         required: false
       enable_dhcp:
         type: boolean
-        default: true
+        default: false
       gateway_ip:
         type: string
         required: false
