Add graph view for operations, divide playbooks into separate plays, fix testing
Delete test & artifacts

Delete artifacts directory

Delete test directory

--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -326,6 +326,7 @@ tosca.nodes.Compute:
     interfaces: openstack.nodes.Server.interfaces
 
 tosca.nodes.network.Network:
+  - interfaces: openstack.nodes.Network.interfaces
   - properties:
       network_name:
           - parameter: openstack.nodes.Network.properties.name
@@ -366,6 +367,7 @@ tosca.nodes.network.Network:
           value: "{self[value]}"
 
 tosca.nodes.network.Port:
+  - interfaces: openstack.nodes.Port.interfaces
   - properties:
       ip_address:
         - parameter: openstack.nodes.Port.properties.fixed_ips
