Add all for multithreading, but now multithreading not works

--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -396,7 +396,7 @@ node_types:
     properties:
       auto_ip:
         type: boolean
-        required: false
+        default: false
       boot_from_volume:
         type: boolean
         default: false
