--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,6 +40,24 @@ jobs:
     - name: Install application
       run: |
         python setup.py install
+
+    - name: Create clouds.yaml
+      run: |
+        mkdir /tmp/clouni
+        cat > /tmp/clouni/clouds.yaml << EOF
+        clouds:
+          openstack:
+            auth:
+              auth_url: ${{ secrets.AUTH_URL }}
+              username: ${{ secrets.USERNAME }}
+              password: ${{ secrets.PASSWORD }}
+              project_id: ${{ secrets.PROJECT_ID }}
+              project_name: ${{ secrets.PROJECT_NAME }}
+              user_domain_name: "Default"
+            region_name: "regionOne"
+            interface: "public"
+            identity_api_version: 3
+        EOF
     - name: Test with pytest
       run: |
-        python -m unittest discover -s testing -t .
+        python -m unittest testing.test_openstack.TestAnsibleOpenStackOutput.test_tasks_success
