--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,8 +43,7 @@ jobs:
 
     - name: Create clouds.yaml
       run: |
-        mkdir /tmp/clouni
-        cat > /tmp/clouni/clouds.yaml << EOF
+        cat > /tmp/clouds.yaml << EOF
         clouds:
           openstack:
             auth:
@@ -60,4 +59,4 @@ jobs:
         EOF
     - name: Test with pytest
       run: |
-        python -m unittest testing.test_openstack.TestAnsibleOpenStackOutput.test_tasks_success
+        python -m unittest discover -s testing -t .
