--- a/toscatranslator/providers/amazon/provider.cfg
+++ b/toscatranslator/providers/amazon/provider.cfg
@@ -8,4 +8,4 @@ module_description = Create element
 
 [ansible.node_filter]
 node_filter_source_prefix = ec2_
-node_filter_source_postfix = _facts
+node_filter_source_postfix = _info
