--- a/toscatranslator/providers/amazon/tosca_elements_map_to_amazon.yaml
+++ b/toscatranslator/providers/amazon/tosca_elements_map_to_amazon.yaml
@@ -25,7 +25,7 @@ tosca.nodes.Compute:
         parameter: amazon.nodes.Instance.properties.instance_type
         value:
           value: apiname
-          facts: ec2_instance_type_facts
+          facts: ec2_instance_info # не факт, надо поразбираться, но ec2_instance_type_facts точно не работает
           executor: ansible
           condition: contains
           arguments:
@@ -57,7 +57,7 @@ tosca.nodes.Compute:
         error: true
         reason: Not supported in AWS
       endpoint.properties.network_name:
-        facts: ec2_vpc_net_facts
+        facts: ec2_vpc_net_info
         executor: ansible
         condition: equals
       endpoint.properties.initiator.target:
@@ -84,7 +84,7 @@ tosca.nodes.Compute:
           - parameter: image_id
             value:
               value: image_id
-              facts: ec2_ami_facts
+              facts: ec2_ami_info
               executor: ansible
               condition: contains
               arguments:
