Try to fix test and add tmp version of keypair node

--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -180,10 +180,14 @@ node_types:
       public_key:
         type: string
         required: false
-    artifacts:
       public_key_file:
-        type: openstack.artifacts.File
+        type: string
         required: false
+    # need to change it later, when artifact support will be added
+    # artifacts:
+      # public_key_file:
+        # type: openstack.artifacts.File
+        # required: false
 
   openstack.nodes.Network: # os_network, os_networks_facts
     derived_from: openstack.nodes.Root
@@ -654,7 +658,7 @@ relationship_types:
 ##########################################################################
 artifact_types:
   openstack.artifacts.File:
-    derived_from: toscsa.artifacts.File
+    derived_from: tosca.artifacts.File
 
   openstack.artifacts.Deployment.Image:
     derived_from: tosca.artifacts.Deployment.Image
